--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Icons/calculator.png">
+    <link rel="icon" href="Icons/calz-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Calculatools - Free Online Calculators</title>
+    <title>Calculaterz - Free Online Calculators</title>
 </head>
 <body>
     <div class="header">
         <div class="logo">
-            <img src="Icons/logo.png" alt="" id="logo">
+            <img src="Icons/final-logo-removebg-preview.png" alt="" id="logo">
         </div>
         <div class="navbar">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Financial</a></li>
-            <li id="health"><a href="#">Health & Fitness</a></li>
-            <li><a href="#">Math</a></li>
-            <li><a href="#">Science</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="financial-calculator.html">Financial</a></li>
+            <li id="health"><a href="health-and-fitness-calulator.html">Health & Fitness</a></li>
+            <li><a href="math-calculator.html">Math</a></li>
+            <li><a href="science-calculator.html">Science</a></li>
             <!-- <li><a href="#">Others</a></li> -->
         </div>
         <!-- <div class="search-container">
@@ -105,7 +105,7 @@
     <section class="calculator-category">
         <h2>Free Online Calculators</h2>
             <div class="calculator-list">
-                <a href="#"><h3>Financial Calculators</h3></a><hr><br>
+                <a href="financial-calculator.html"><h3>Financial Calculators</h3></a><hr><br>
                 <li><a href="#">Mortage Calculator</a></li>
                 <li><a href="#">Loan Calculator</a></li>
                 <li><a href="#">Auto Loan Calculator</a></li>
@@ -120,7 +120,7 @@
                 <li><a href="#">Compound Interest Calculator</a></li>
             </div>
             <div class="calculator-list2">
-                <a href="#"><h3>Fitness & Health Calculators</h3></a><hr><br>
+                <a href="health-and-fitness-calulator.html"><h3>Health & Fitness Calculators</h3></a><hr><br>
                 <li><a href="#">Mortage Calculator</a></li>
                 <li><a href="#">Loan Calculator</a></li>
                 <li><a href="#">Auto Loan Calculator</a></li>
@@ -134,7 +134,7 @@
                 <li><a href="#">Income Tax Calculator</a></li>
             </div>
             <div class="calculator-list">
-                <a href="#"><h3>Math Calculators</h3></a><hr><br>
+                <a href="math-calculator.html"><h3>Math Calculators</h3></a><hr><br>
                 <li><a href="#">Mortage Calculator</a></li>
                 <li><a href="#">Loan Calculator</a></li>
                 <li><a href="#">Auto Loan Calculator</a></li>
@@ -150,7 +150,7 @@
             </div>
 
             <div class="calculator-list">
-                <a href="#"><h3>Science Calculators</h3></a><hr><br>
+                <a href="science-calculator.html"><h3>Science Calculators</h3></a><hr><br>
                 <li><a href="#">Mortage Calculator</a></li>
                 <li><a href="#">Loan Calculator</a></li>
                 <li><a href="#">Auto Loan Calculator</a></li>
@@ -166,7 +166,7 @@
             </div>
             
             <div class="calculator-list">
-                <a href="#"><h3>Other Calculators</h3></a><hr><br>
+                <a href="other-calculator.html"><h3>Other Calculators</h3></a><hr><br>
                 <li><a href="#">Mortage Calculator</a></li>
                 <li><a href="#">Loan Calculator</a></li>
                 <li><a href="#">Auto Loan Calculator</a></li>
@@ -198,11 +198,6 @@
             <p id="copyright">&copy; 2025 <a href="#">Calculatools.com</a> &ThickSpace; | &ThickSpace;All rights reserved.</p> -->
         </div>
     </footer>
-
-
-
-
-
     <script src="script.js"></script>
 </body>
 </html>
