--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
             <div class="line" id="line3"></div>
             <div class="line" id="line4"></div>
         </div>
+        <div class="hamburger-navbar" id="hamburgerNavbar">
+            <button class="close-btn" id="closeBtn">&times;</button>
+            <a href="index.html">Home</a>
+            <a href="financial-calculator.html">Financial Calculators</a>
+            <a href="health-and-fitness-calulator.html">Health & Fitness Calculators</a>
+            <a href="math-calculator.html">Math Calculators</a>
+            <a href="science-calculator.html">Sciece Calculators</a>
+            <a href="other-calculator.html">Other Calculators</a>
+            <a href="#">All Calculators</a>
+            <div class="hamburger-search-container">
+                <input type="text" id="hamburger-search" placeholder="Search for a calculator...">
+                <button type="submit" class="search-button">Search</button>
+            </div>
+            <div class="hamburger-socialIcons">
+                <a href="#" class="hamburger-social"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="hamburger-social"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="hamburger-social"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" class="hamburger-social"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+            <p>&copy; &ThickSpace; All rights reserved.</p>
+        </div>
     </div>
     <main>
         <div class="calculator">
@@ -199,5 +220,18 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script>
+        const hamburger = document.querySelector('.hamburger-menu');
+        const navMenu = document.getElementById('hamburgerNavbar');
+        const closeBtn = document.getElementById('closeBtn');
+
+        hamburger.addEventListener('click', () => {
+            navMenu.classList.toggle('active');
+        });
+
+        closeBtn.addEventListener('click', () => {
+            navMenu.classList.remove('active');
+        });
+    </script>
 </body>
 </html>
