--- a/health-and-fitness-calulator.html
+++ b/health-and-fitness-calulator.html
@@ -34,6 +34,27 @@
             <div class="line" id="line3"></div>
             <div class="line" id="line4"></div>
         </div>
+        <div class="hamburger-navbar" id="hamburgerNavbar">
+            <!-- <button class="close-btn" id="closeBtn">&times;</button> -->
+            <a href="index.html">Home</a>
+            <a href="financial-calculator.html">Financial Calculators</a>
+            <a href="health-and-fitness-calulator.html">Health & Fitness Calculators</a>
+            <a href="math-calculator.html">Math Calculators</a>
+            <a href="science-calculator.html">Sciece Calculators</a>
+            <a href="other-calculator.html">Other Calculators</a>
+            <a href="#">All Calculators</a>
+            <div class="hamburger-search-container">
+                <input type="text" id="hamburger-search" placeholder="Search for a calculator...">
+            </div>
+            <button type="submit" class="search-button">Search</button>
+            <div class="hamburger-socialIcons">
+                <a href="#" class="hamburger-social"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#" class="hamburger-social"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#" class="hamburger-social"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" class="hamburger-social"><i class="fa-brands fa-facebook"></i></a>
+            </div>
+            <p>&copy; &ThickSpace; All rights reserved.</p>
+        </div>
     </div>
     
     <div class="financial-container">
