--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Calculaterz - Free Online Calculators</title>
 </head>
 <body>
+    <!-- Top Header / Navbar -->
     <div class="header">
         <div class="logo">
             <img src="Icons/final-logo-removebg-preview.png" alt="" id="logo">
@@ -35,7 +36,7 @@
             <div class="line" id="line4"></div>
         </div>
         <div class="hamburger-navbar" id="hamburgerNavbar">
-            <button class="close-btn" id="closeBtn">&times;</button>
+            <!-- <button class="close-btn" id="closeBtn">&times;</button> -->
             <a href="index.html">Home</a>
             <a href="financial-calculator.html">Financial Calculators</a>
             <a href="health-and-fitness-calulator.html">Health & Fitness Calculators</a>
@@ -45,8 +46,8 @@
             <a href="#">All Calculators</a>
             <div class="hamburger-search-container">
                 <input type="text" id="hamburger-search" placeholder="Search for a calculator...">
-                <button type="submit" class="search-button">Search</button>
             </div>
+            <button type="submit" class="search-button">Search</button>
             <div class="hamburger-socialIcons">
                 <a href="#" class="hamburger-social"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#" class="hamburger-social"><i class="fa-brands fa-twitter"></i></a>
@@ -56,7 +57,10 @@
             <p>&copy; &ThickSpace; All rights reserved.</p>
         </div>
     </div>
+
+    <!-- Main Section including scientific calculator and BMI Calculator -->
     <main>
+        <!-- Scientific Calculator -->
         <div class="calculator">
             <input type="text" id="display" disabled>
             <div class="buttons">
@@ -109,6 +113,7 @@
             </div>
         </div>
 
+        <!-- BMI Calculator -->
         <section class="calculator-bmi">
             <h2>BMI Calculator</h2>
             <div class="calculator-form">
@@ -123,6 +128,8 @@
             <div id="result" class="result"></div>
           </section>
     </main>
+
+    <!-- Free Online Calculators -->
     <section class="calculator-category">
         <h2>Free Online Calculators</h2>
             <div class="calculator-list">
@@ -204,6 +211,7 @@
     </section>
 
 
+    <!-- Footer -->
     <footer class="footer">
         <div class="socialIcons">
             <a href="#" class="social"><i class="fa-brands fa-instagram"></i></a>
@@ -220,18 +228,5 @@
         </div>
     </footer>
     <script src="script.js"></script>
-    <script>
-        const hamburger = document.querySelector('.hamburger-menu');
-        const navMenu = document.getElementById('hamburgerNavbar');
-        const closeBtn = document.getElementById('closeBtn');
-
-        hamburger.addEventListener('click', () => {
-            navMenu.classList.toggle('active');
-        });
-
-        closeBtn.addEventListener('click', () => {
-            navMenu.classList.remove('active');
-        });
-    </script>
 </body>
 </html>
