additional calculators added

--- a/health-and-fitness-calulator.html
+++ b/health-and-fitness-calulator.html
@@ -60,71 +60,44 @@
     <div class="financial-container">
         <div class="left-container">
             <div class="up-container">
-                <h2>Financial Calcualtors</h2>
-                <p>The following is a complete list of our financial calculators.</p>
+                <h2>Health & Fitness Calcualtors</h2>
+                <p>The following is a complete list of our health and fitness calculators.</p>
             </div>
             <div class="down-container">
                 <div class="down-container1">
-                    <h3>Mortage & Real State</h3>
-                    <li><a href="">Amortization Calculator</a></li>
-                    <li><a href="">Mortgage Payoff Calculator</a></li>
-                    <li><a href="">House Affordability Calculator</a></li>
-                    <li><a href="">Rent Calculator</a></li>
-                    <li><a href="">Debt-to-Income Ratio Calculator</a></li>
-                    <li><a href="">Real Estate Calculator</a></li>
-                    <li><a href="">Refinance Calculator</a></li>
-                    <li><a href="">Rental Property Calculator</a></li>
-                    <li><a href="">APR Calculator</a></li>
-                    <li><a href="">FHA Loan Calculator</a></li>
-                    <li><a href="">VA Mortgage Calculator</a></li>
-                    <li><a href="">Down Payment Calculator</a></li>
-                    <li><a href="">Rent vs. Buy Calculator</a></li><br><br>
-                    <h3>Investment</h3>
-                    <li><a href="">Investment Calculator</a></li>
-                    <li><a href="">Finance Calculator</a></li>
-                    <li><a href="">Compound Interest Calculator</a></li>
+                    <h3>Fitness</h3>
+                    <li><a href="">BMI Calculator</a></li>
+                    <li><a href="">Calorie Calculator</a></li>
+                    <li><a href="">Body Fat Calculator</a></li>
+                    <li><a href="">BMR Calculator</a></li>
+                    <li><a href="">Ideal Weight Calculator</a></li>
+                    <li><a href="">Pace Calculator Calculator</a></li>
+                    <li><a href="">Army Body Fat Calculator</a></li>
+                    <li><a href="">Lean Body Mass Calculator</a></li>
+                    <li><a href="">Healthy Weight Calculator</a></li>
+                    <li><a href="">Calories Burned Calculator</a></li>
+                    <li><a href="">One Rep Max Calculator</a></li><br><br>
+                    <h3>Pregnancy</h3>
+                    <li><a href="">Pregnancy Calculator</a></li>
+                    <li><a href="">Pregnancy Weight Gain Calculator</a></li>
+                    <li><a href="">Due Date Calculator</a></li>
                     <li><a href="">Savings Calculator</a></li>
-                    <li><a href="">Simple Interest Calculator</a></li>
+                    <li><a href="">Ovulation Calculator</a></li>
                     <li><a href="">CD Calculator</a></li>
-                    <li><a href="">Bond Calculator</a></li>
-                    <li><a href="">Average Return Calculator</a></li>
-                    <li><a href="">Payback Period Calculator</a></li>
-                    <li><a href="">FHA Loan Calculator</a></li>
-                    <li><a href="">ROI Calculator</a></li>
-                    <li><a href="">Present Value Calculator</a></li>
-                    <li><a href="">Future Value Calculator</a></li><br>
+                    <li><a href="">Conception Calculator</a></li>
+                    <li><a href="">Period Calculator</a></li>
                 </div>
                 <div class="down-container2">
-                    <h3>Retirement</h3>
-                    <li><a href="">Retirement Calculator</a></li>
-                    <li><a href="">401K Calculator</a></li>
-                    <li><a href="">Pension Calculator</a></li>
-                    <li><a href="">Social Security Calculator</a></li>
-                    <li><a href="">Annuity Calculator</a></li>
-                    <li><a href="">Annuity Payout Calculator</a></li>
-                    <li><a href="">Roth IRA Calculator</a></li>
-                    <li><a href="">IRA Calculator</a></li>
-                    <li><a href="">RMD Calculator</a></li><br><br>
-                    <h3>Tax and Salary</h3>
-                    <li><a href="">Income Tax Calculator</a></li>
-                    <li><a href="">Salary Calculator</a></li>
-                    <li><a href="">Marriage Tax Calculator</a></li>
-                    <li><a href="">Estate Tax Calculator</a></li>
-                    <li><a href="">Take-Home-Paycheck Calculator</a></li><br><br>
                     <h3>Other</h3>
-                    <li><a href="">Loan Calculator</a></li>
-                    <li><a href="">Finance Calculator</a></li>
-                    <li><a href="">Compound Interest Calculator</a></li>
-                    <li><a href="">Savings Calculator</a></li>
-                    <li><a href="">Simple Interest Calculator</a></li>
-                    <li><a href="">CD Calculator</a></li>
-                    <li><a href="">Bond Calculator</a></li>
-                    <li><a href="">Average Return Calculator</a></li>
-                    <li><a href="">Payback Period Calculator</a></li>
-                    <li><a href="">FHA Loan Calculator</a></li>
-                    <li><a href="">ROI Calculator</a></li>
-                    <li><a href="">Budget Calculator</a></li>
-                    <li><a href="">Commission Calculator</a></li><br>
+                    <li><a href="">Macro Calculator</a></li>
+                    <li><a href="">Carbohydrate Calculator</a></li>
+                    <li><a href="">Protein Calculator</a></li>
+                    <li><a href="">Fat intake Calculator</a></li>
+                    <li><a href="">TDEE Calculator</a></li>
+                    <li><a href="">GFR Calculator</a></li>
+                    <li><a href="">Body Type Calculator</a></li>
+                    <li><a href="">Body Surface Area Calculator</a></li>
+                    <li><a href="">BAC Calculator</a></li><br><br>
                 </div>
             </div>
         </div>
