--- a/financial-calculator.html
+++ b/financial-calculator.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Financial Calculators</title>
 </head>
 <body>
@@ -131,10 +134,29 @@
         <div class="right-container">
             <div class="right-box">
                 <div class="financial-search">
-
+                    <input type="text" placeholder="Search for a calculator...">
+                    <button type="submit">Search</button>
                 </div>
                 <div class="financial-content-box">
-
+                    <h3>Health & Fitness Calcualtors</h3>
+                    <div class="financial-content-box1">
+                        <li><a href="">BMI Calculator</a></li>
+                        <li><a href="">Calorie Calculator</a></li>
+                        <li><a href="">Body Fat Calculator</a></li>
+                        <li><a href="">BMR Calculator</a></li>
+                        <li><a href="">Ideal Weight Calculator</a></li>
+                        <li><a href="">Pace Calculator Calculator</a></li>
+                        <li><a href="">Army Body Fat Calculator</a></li>
+                        <li><a href="">Lean Body Mass Calculator</a></li>
+                        <li><a href="">Healthy Weight Calculator</a></li>
+                        <li><a href="">Calories Burned Calculator</a></li>
+                        <li><a href="">One Rep Max Calculator</a></li>
+                        <li><a href="">Pregnancy Calculator</a></li>
+                        <li><a href="">Pregnancy Weight Gain Calculator</a></li>
+                        <li><a href="">Due Date Calculator</a></li>
+                        <li><a href="">Savings Calculator</a></li>
+                        <li><a href="">Ovulation Calculator</a></li>
+                    </div>
                 </div>
             </div>
         </div>
