--- a/science-calculator.html
+++ b/science-calculator.html
@@ -14,7 +14,7 @@
 <body>
     <div class="header">
         <div class="logo">
-            <img src="Icons/final-logo-removebg-preview.png" alt="" id="logo">
+            <img src="Icons/logo.png" alt="" id="logo">
         </div>
         <div class="navbar">
             <li><a href="index.html">Home</a></li>
